# INF3995_BACKUP

crazysystem-master/crazysystem-master/: .gitignore  README.md  docker-compose.yml  run.sh
crazysystem-master/crazysystem-master/Client/: Dockerfile.client  Dockerfile.test  README.md
crazysystem-master/crazysystem-master/Client/crazyview/: angular.json  karma.conf.js  package-lock.json  package.json  tslint.json
crazysystem-master/crazysystem-master/Client/crazyview/src/: index.html  styles.scss
crazysystem-master/crazysystem-master/Drone/: .gitignore  Dockerfile  README.md
crazysystem-master/crazysystem-master/Drone/embedded/: Makefile  version.c
crazysystem-master/crazysystem-master/Drone/embedded/nrf/: Dockerfile
crazysystem-master/crazysystem-master/Drone/embedded/src/: Makefile  (+1 more)
crazysystem-master/crazysystem-master/Drone/sim/: CMakeLists.txt
crazysystem-master/crazysystem-master/Drone/tools/: CMakeLists.txt
crazysystem-master/crazysystem-master/Drone/tools/BehaviourController/BehaviourControllerSimulation/: BehaviourControllerSimulation.cpp  BehaviourControllerSimulation.h  CMakeLists.txt
crazysystem-master/crazysystem-master/Server/: Dockerfile.server  Dockerfile.test  README.md  requirements.txt
crazysystem-master/crazysystem-master/Server/src/: baseStation.py  baseStation_test.py  customLogger.py  customLogger_test.py  mapHelper.py  mapHelper_test.py  mapPointSaver.py  mapPointSaver_test.py  server.py  socketClient.py  socketClient_test.py  socketSimulation.py  socketSimulation_test.py  testSuite.py  webRouting.py  webRouting_test.py
(+72 files in other folders)
